need to fix overflow x

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 body{
     background-color: #161a1d;
     position: relative;
+    
 }
 .title{
     color: #52b788;
@@ -91,7 +92,7 @@ body{
     margin-top: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 100vw;
+    width: 100%;
     margin-right: 2%;
  
     font-family: "Gelasio", serif;
@@ -103,7 +104,7 @@ body{
   }
 
 .card-project img {
-    width: 100vw;
+    width: 100%;
     height: 150px;
   
 }
@@ -553,6 +554,12 @@ body{
     color: lightgreen !important;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 
   
   /*responsive*/
@@ -627,8 +634,11 @@ body{
   .title{
     font-size: 1rem;
   }
-  html{
-    width: 100vw;
+  *{
+    box-sizing: border-box;
   }
-
+*::before,
+*::after {
+    box-sizing: border-box;
+}
   }
